# doc

./: .gitignore  README.md  中通快运轮台.md  平水韵拟音.md
lang/: japanese summary.md  korean summary.md  poe.md  字書.md  格.md  语言学习方法.md
lang/IPA/: AV Phonetics IOS, Android APP.md  IPA图表带真人发音.md  一本万利的国际音标.md  东京外国语大学IPA 发音.md  中古汉语国际音标.md  汉语拼音与国际音标对照表（简明版） .md  汉语拼音字母与国际音标对照表.md  汉语拼音字母与国际音标对照表.xlsx
lang/Japanese/: 200多个中国姓氏的日语念法.doc  grammar.md  homework.md  romaji.md  五十音图.md  字書.md  宝可梦珍钻192.md  日本语-金田一春彦.md  爱花线纯手打翻译.md
lang/QA/: 四旋翼无人的电机硬件选购.md  (+11 more)
lang/programming/cpp/xcode/echodict/: CMakeLists.txt
lang/programming/haskell/supermario/: Actor.hs  AppUtil.hs  Const.hs  Event.hs  Field.hs  Font.hs  Images.hs  Main.hs  Makefile  Mixer.hs  Pad.hs  Player.hs  README.ja.txt  README.txt  Setup.lhs  Sounds.hs  ToDo.txt  Util.hs  entry.c  monao.cabal  stack.yaml
lang/programming/haskell/supermario/Actor/: AnimBlock.hs  BrokenBlock.hs  CoinGet.hs  Common.hs  Flower.hs  Kinoko.hs  Koura.hs  Kuribo.hs  Nokonoko.hs  ScoreAdd.hs  Shot.hs
lang/programming/haskell/supermario/tool/: FileUtils.hs  listup-imgs.hs
mus/: File.md  Tidal, SuperDirt, SuperCollider.md  keluo.txt  mem-mus.md  乐理.md  乐理小白歌词写作基础.md  从零开始学钢琴-童薇.md  伯克利流行歌曲写作·旋律.md  作曲技法理论篇.md  和弦进行秘笈・活用与演奏.md  外国音乐表演用语词典.md  大家都来听古典-吉松隆.md  小幸运.txt  洞箫入门半个老师.md  流行歌词写作教程.md  简谱基本乐理视唱练耳基础教程-李重光.md  翟黑山爵士四书之・旋律分析.md  聆听心声-音乐审美心理.md  花之舞《flower dance》.md  葬花吟F调筒音2.md  视唱练耳-中央音乐学院.md  跟着龚琳娜学唱歌.md  钢琴基础教学初学之心半音阶大调音阶和弦.md  音乐奥秘解码-轻松学乐理.md  高考音乐强化训练-基本乐理卷.md
tech/: Frp summary.md  install_archlinux.md  mem.md  survive.md  tech.md  熵.txt
(+6609 files in other folders)
